Fix selection drawing for block selection

Ensure that currentPosition falls within selection range. Selection
range in case of block selection works differently i.e., its a column
selection thus we need to handle it differently.

BUG: 508522